--- a/index.html
+++ b/index.html
@@ -3,42 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <title>Main page</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@1,400;1,700&family=Montserrat:wght@700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <svg width="100" height="52" viewBox="0 0 100 52" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <header class="header container">
+        <svg class="header-logo" width="100" height="52" viewBox="0 0 100 52" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path fill-rule="evenodd" clip-rule="evenodd" d="M0 0H18.1129C31.1202 0 40.4058 12.3713 40.4058 24.0356V27.7332C40.4058 39.3974 31.1202 51.7689 18.1129 51.7689H0V0ZM37.6192 24.0356C37.6192 13.5132 29.2167 2.77333 18.1129 2.77333H2.78661V48.9956H18.1129C29.2167 48.9956 37.6192 38.2557 37.6192 27.7333V24.0356Z" fill="#1E0606"/>
             <path d="M46.4435 0H49.2301V49.2267H64.092V52H46.4435V0Z" fill="#1E0606"/>
-            <path d="M67.8074 0V51.7689H70.5941V27.3833L71.278 26.7025L96.0884 51.7689H100L73.2485 24.7414L98.1084 0H94.1675L70.5941 23.4612V0H67.8074Z" fill="#1E0606"/>
+            <path d="M67.8074 0V51.7689H70.5941V27.3833L71.278 26.7025L96.0884 51.7689H100L73.2485 24.7414L98.1084 0H94.1675L70.5941 23.4612V0H67.8074Z" fill="#1E0606"/> 
         </svg>
-        <nav>
-            <ul>
-                <li><a href="#">Blog</a></li> 
-                <li><a href="#">Catalog</a></li>
-                <li><a href="#">About us</a></li>       
+        <nav class="header-nav">
+            <ul class="outline header-list">
+                <li class="header-item"><a href="#">Blog</a></li> 
+                <li class="header-item"><a href="#">Catalog</a></li>
+                <li class="header-item"><a href="#">About us</a></li>       
             </ul>
         </nav>
-        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <svg class="header-search" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M14.365 3.26001C10.945 3.26001 8.16497 6.08001 8.16497 9.52001C8.16497 10.98 8.66497 12.3 9.48497 13.38L3.60498 19.32C3.26498 19.68 3.26498 20.24 3.60498 20.58C3.78498 20.76 4.00498 20.84 4.22498 20.84C4.46498 20.84 4.68497 20.76 4.86497 20.58L10.745 14.62C11.765 15.36 13.005 15.78 14.345 15.78C17.765 15.78 20.545 12.96 20.545 9.52001C20.565 6.06001 17.785 3.26001 14.365 3.26001ZM14.365 14.2C11.825 14.2 9.76497 12.1 9.76497 9.52001C9.76497 6.94001 11.825 4.84001 14.365 4.84001C16.905 4.84001 18.965 6.94001 18.965 9.52001C18.965 12.1 16.905 14.2 14.365 14.2ZM17.465 9.60001C17.425 9.94001 17.125 10.2 16.785 10.2C16.745 10.2 16.725 10.2 16.685 10.2C16.305 10.14 16.045 9.80001 16.085 9.42001C16.225 8.38001 15.065 7.84001 15.005 7.82001C14.665 7.66001 14.505 7.24001 14.665 6.90001C14.825 6.56001 15.225 6.40001 15.585 6.54001C15.665 6.56001 17.745 7.52001 17.465 9.60001ZM16.005 11.12C16.145 11.26 16.245 11.48 16.245 11.68C16.245 11.9 16.165 12.1 16.005 12.24C15.865 12.38 15.645 12.48 15.445 12.48C15.245 12.48 15.025 12.4 14.885 12.24C14.745 12.1 14.645 11.88 14.645 11.68C14.645 11.48 14.725 11.26 14.885 11.12C15.025 10.98 15.245 10.88 15.445 10.88C15.645 10.88 15.845 10.96 16.005 11.12Z" fill="#1E0606"/>
         </svg>
-        <a href="#">Contact us</a>
+        <a class="contacts" href="#">Contact us</a>
     </header>
     <main>
-        <section class="slider">
-            <h1>THE OOH NOO COLLECTION</h1>
-            <p>Designed in Slovenia</p>
-            <button class="button">EXPLORE NOW</button>
-            <img src="images/slider1.png" alt="" class="slide1">
-            <img src="img.png" alt="" class="slide2">
-            <img src="img.png" alt="" class="slide3">
-            <img src="img.png" alt="" class="slide4">
-            <div>
-                <p>Free (continental) USA shipping on all orders of $100 USD or more!</p>
-            </div>
+        <section class="slider container">
+                <h1 class="title-first-type">THE OOH NOO COLLECTION</h1>
+                <p class="slovenia-design">Designed in Slovenia</p>
+                <button class="button">EXPLORE NOW</button>
+                <div>
+                    <p class="free-shipping">Free (continental) USA shipping on all orders of $100 USD or more!</p>
+                </div>
         </section>
         <section class="products">
-            <h2>Category Products</h2>
-            <ul>
+            <div class="container">
+                <h2 class="title-second-type">Category Products</h2>
+                <ul class="outline">
                 <li>
                     <a href="#">
                         <img src="images/prod1.jpg" alt="" width="280" height="270">
@@ -65,36 +66,37 @@
                 </li>
             </ul>
             <div>
-                <button class="submit" class="button"><svg width="18" height="30" viewBox="0 0 18 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <button class="button control"><svg width="18" height="30" viewBox="0 0 18 30" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M16 2L3 15L16 28" stroke="#1E0606" stroke-width="4"/>
                     </svg>
-                    </button>
+                </button>
             </div>
             <div>
-                <button class="button"><svg width="37" height="37" viewBox="0 0 37 37" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <button class="button control"><svg width="37" height="37" viewBox="0 0 37 37" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <rect width="37" height="37" fill="#70BBDC" fill-opacity="0.2"/>
                     <path d="M12 5L25 18L12 31" stroke="#1E0606" stroke-width="4"/>
                     </svg>
-                    </button>
+                </button>
             </div>
             <p>Modern finds for the modern home. Curated goods by unique designers around the world from fashion to furniture for kids and adults.</p>
+        </div>
         </section>
-        <section class="delivery">
+        <section class="delivery container">
             <img src="images/delivery.jpg" alt="" width="480" height="559">
             <div>
-                <h2>Delivery</h2>
+                <h2 class="title-second-type">Delivery</h2>
                 <div class="tabs">
-                    <input type="radio" name="tabs" id="tab-first" checked >
+                    <input type="radio" name="tabs" id="tab-first">
                     <label for="tab-first">
-                        <p>Delivery</p>
+                        <p class="tabs-item">Delivery</p>
                     </label>
                     <input type="radio" name="tabs" id="tab-second">
                     <label for="tab-second">
-                        <p>Guarantee</p>
+                        <p class="tabs-item">Guarantee</p>
                     </label>
                     <input type="radio" name="tabs" id="tab-third">
                     <label for="tab-third">
-                        <p>Credit</p>
+                        <p class="tabs-item">Credit</p>
                     </label>
                     <div id="tab-content-1" class="tab-content">
                         <p>Some days i feel like i've been working on dlk my entire life and there are other days that i am completely shocked that four years have flown by. It's simply magical.
@@ -111,35 +113,36 @@
                 <button class="button">LEARN MORE</button>
             </div>
         </section>
-        <section class="brands">
-            <h2 class="hidden">Brands</h2>
-            <ul>
+        <section class="brands container">
+            <div class="container">
+                <h2 class="hidden">Brands</h2>
+            <ul class="outline">
                 <li><img src="images/brand1.png" alt="" width="193" height="60"></li>
                 <li><img src="images/brand2.png" alt="" width="179" height="61"></li>
                 <li><img src="images/brand3.png" alt="" width="216" height="46"></li>
                 <li><img src="images/brand4.png" alt="" width="211" height="40"></li>
             </ul>    
+            </div>
         </section>
-        <section class="about">
-            <h2>Design Life Kids</h2>
-            <h3>About Us</h3>
+        <section class="about container">
+            <h2 class="title-second-type">Design Life Kids</h2>
+            <h3 class="title-third-type">About Us</h3>
             <p>Some days i feel like i've been working on dlk my entire life and there are other days that i am completely shocked that four years have flown by. It's simply magical.</p>
             <a href="#" class="button">buy now</a>
         </section>
-        <section class="contacts">
-            <h2>Contacts</h2>
+        <section class="contacts container">
+            <h2 class="title-second-type">Contacts</h2>
             <p>Some days i feel like i've been working on dlk my entire life and there are other days that i am completely shocked that four years have flown by. It's simply magical.</p>
             <div class="map">
                 <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Ae975d5d0230c97fc17fe4170bcd64da9bd5d640035324b55dcba715d358a7b22&amp;source=constructor" width="483" height="196" frameborder="0" style="border:0"></iframe>
-                
             </div>
         </section>
     </main>
-    <footer>
-        <div class="navigation">
-            <h2>Navigation</h2>
+    <footer class="footer wrapper">
+        <div class="footer-navigation">
+            <h4 class="title-four-type">Navigation</h4>
             <nav>
-                <ul>
+                <ul class="outline">
                     <li><a href="#">About Us</a></li> 
                     <li><a href="#">Blog</a></li>
                     <li><a href="#">Design Services</a></li>
@@ -150,9 +153,9 @@
             </nav>
         </div>
         <div class="customer">
-            <h2>Customer Information</h2>
+            <h4 class="title-four-type">Customer Information</h4>
             <nav>
-                <ul>
+                <ul class="outline">
                     <li><a href="#">Contact Us</a></li> 
                     <li><a href="#">Sale Exclusions</a></li>
                     <li><a href="#">Shipping & Returns</a></li>
@@ -163,13 +166,12 @@
             </nav>
         </div>
         <div class="connect">
-            <h2>Connect</h2>
+            <h4 class="title-four-type">Connect</h4>
             <form action="#" method="POST" class="">
-                <fieldset class="">
-                    <div class=""><input name="mail" type="email" placeholder="Email"></div>
-                </fieldset>
+                <input name="mail" type="email" placeholder="Email">
                 <button type="submit">Join</button>
-            <ul class="social">
+            </form>  
+                <ul class="outline" class="social">
                 <li><a href="#" target="_blanK">
                     <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path fill-rule="evenodd" clip-rule="evenodd" d="M0 15C0 6.71573 6.71573 0 15 0C23.2843 0 30 6.71573 30 15C30 23.2843 23.2843 30 15 30C6.71573 30 0 23.2843 0 15Z" fill="#666666"/>
@@ -216,11 +218,15 @@
                     <path d="M5.60845 0.927052C5.9078 0.0057416 7.21121 0.00574088 7.51056 0.927052L8.58013 4.21885H12.0413C13.0101 4.21885 13.4128 5.45846 12.6291 6.02786L9.82895 8.06231L10.8985 11.3541C11.1979 12.2754 10.1434 13.0415 9.35968 12.4721L6.55951 10.4377L3.75934 12.4721C2.97563 13.0415 1.92115 12.2754 2.2205 11.3541L3.29007 8.06231L0.4899 6.02787C-0.293814 5.45846 0.108961 4.21885 1.07768 4.21885H4.53888L5.60845 0.927052Z" fill="white"/>
                 </svg>
             </div>
-            <p>Copyright © 2018 Dlk • Design Life Kids</p>
-            <a href="https://directline.digital/"> Web Design — Direct Line Development</a>
+                <p>Copyright © 2018 Dlk • Design Life Kids</p>
+                <a href="https://directline.digital/"> Web Design — Direct Line Development</a>
+        </div>
         </div>
     </footer>
     
+
+
+
     <div class="modal_form">
         <h1 class="hidden">Modal window</h1>
         <form action="#" method="POST" class="form_body">
