--- a/catalog.html
+++ b/catalog.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Catalog</title>
-    <link rel="stylesheet" href="#">
+    <link rel="stylesheet" href="normalize.css">
+    <link rel="stylesheet" href="catalog.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@1,400;1,700&family=Montserrat:wght@700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header class="header container" id="header-top">
+    <header class="header container">
         <a href="#">
             <svg class="header-logo" width="100" height="52" viewBox="0 0 100 52" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd" d="M0 0H18.1129C31.1202 0 40.4058 12.3713 40.4058 24.0356V27.7332C40.4058 39.3974 31.1202 51.7689 18.1129 51.7689H0V0ZM37.6192 24.0356C37.6192 13.5132 29.2167 2.77333 18.1129 2.77333H2.78661V48.9956H18.1129C29.2167 48.9956 37.6192 38.2557 37.6192 27.7333V24.0356Z" fill="#1E0606"/>
@@ -27,12 +28,12 @@
         <svg class="header-search" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M14.365 3.26001C10.945 3.26001 8.16497 6.08001 8.16497 9.52001C8.16497 10.98 8.66497 12.3 9.48497 13.38L3.60498 19.32C3.26498 19.68 3.26498 20.24 3.60498 20.58C3.78498 20.76 4.00498 20.84 4.22498 20.84C4.46498 20.84 4.68497 20.76 4.86497 20.58L10.745 14.62C11.765 15.36 13.005 15.78 14.345 15.78C17.765 15.78 20.545 12.96 20.545 9.52001C20.565 6.06001 17.785 3.26001 14.365 3.26001ZM14.365 14.2C11.825 14.2 9.76497 12.1 9.76497 9.52001C9.76497 6.94001 11.825 4.84001 14.365 4.84001C16.905 4.84001 18.965 6.94001 18.965 9.52001C18.965 12.1 16.905 14.2 14.365 14.2ZM17.465 9.60001C17.425 9.94001 17.125 10.2 16.785 10.2C16.745 10.2 16.725 10.2 16.685 10.2C16.305 10.14 16.045 9.80001 16.085 9.42001C16.225 8.38001 15.065 7.84001 15.005 7.82001C14.665 7.66001 14.505 7.24001 14.665 6.90001C14.825 6.56001 15.225 6.40001 15.585 6.54001C15.665 6.56001 17.745 7.52001 17.465 9.60001ZM16.005 11.12C16.145 11.26 16.245 11.48 16.245 11.68C16.245 11.9 16.165 12.1 16.005 12.24C15.865 12.38 15.645 12.48 15.445 12.48C15.245 12.48 15.025 12.4 14.885 12.24C14.745 12.1 14.645 11.88 14.645 11.68C14.645 11.48 14.725 11.26 14.885 11.12C15.025 10.98 15.245 10.88 15.445 10.88C15.645 10.88 15.845 10.96 16.005 11.12Z" fill="#1E0606"/>
         </svg>
-        <a class="contacts" href="#">Contact us</a>
+        <a class="header-contacts" href="#">Contact us</a>
     </header>
     <main>
-        <h1>Category Products</h1>
+        <h1 class="page-title container">Category Products</h1>
            <div class="breadcrumbs">
-            <ul class="breadcrumbs-list">
+            <ul class="breadcrumbs-list container">
                 <li class="breadcrumbs-item">
                 <a class="breadcrumbs-link" href="#">Home</a>
                 </li>
@@ -41,58 +42,71 @@
                 </li>
             </ul>
         </div>
-        <section class="products">
-            <ul>
-                <li>
+        <section class="products container">
+            <ul class="outline products-list">
+                <li class="products-item">
+                    <div class="container-link">
                     <a href="#">
                         <img src="images/prod1.jpg" alt="" width="280" height="270">
-                        <p>APPAREL KIDS</p>
+                        <p class="title-link">APPAREL KIDS</p>
                     </a>
+                </div>
                 </li>
-                <li>
-                    <a href="#">
-                        <img src="images/prod2.jpg" alt="" width="280" height="270">
-                        <p>HOLIDAY SHOP</p>
-                    </a>
+                <li class="products-item">
+                    <div class="container-link">
+                        <a href="#">
+                            <img src="images/prod2.jpg" alt="" width="280" height="270">
+                            <p class="title-link">HOLIDAY SHOP</p>
+                        </a>
+                    </div>
+                    
                 </li>
-                <li>
-                    <a href="#">
+                <li class="products-item">
+                    <div class="container-link">
+                       <a href="#">
                         <img src="images/prod3.jpg" alt="" width="280" height="270">
-                        <p>TOYS</p>
-                    </a>
+                        <p class="title-link">TOYS</p>
+                    </a>  
+                    </div>
                 </li>
-                <li>
-                    <a href="#">
-                        <img src="images/prod4.jpg" alt="" width="280" height="270">
-                        <p>ACCESSORIES</p>
-                    </a>
+                <li class="products-item">
+                    <div class="container-link">
+                        <a href="#">
+                            <img src="images/prod4.jpg" alt="" width="280" height="270">
+                            <p class="title-link">ACCESSORIES</p>
+                        </a>
+                    </div>
                 </li>
-                <li>
-                    <a href="#">
-                        <img src="images/prod5.jpg" alt="" width="280" height="270">
-                        <p>SALE</p>
-                    </a>
+                <li class="products-item">
+                    <div class="container-link">
+                        <a href="#">
+                            <img src="images/prod5.jpg" alt="" width="280" height="270">
+                            <p class="title-link">SALE</p>
+                        </a>
+                    </div>
                 </li>
-                <li>
+                <li class="products-item">
+                    <div class="container-link">
                     <a href="#">
                         <img src="images/prod6.jpg" alt="" width="280" height="270">
-                        <p>APPAREL ADULTS</p>
+                        <p class="title-link">APPAREL ADULTS</p>
                     </a>
+                    </div>
                 </li>
             </ul>
         </section>
         <section class="description">
-            <h2>Product Description</h2>
-            <p>Interactive doll Zapf Creation Baby Born Sister can drink from a bottle and almost really cry. You can even bathe her, just like a little sister.</p>
-            <p>A toy with a height of 43 cm bends its knees, the head rotates, it can stand upright. Such a doll will be an excellent choice for a gift for a girl from 4 years old.</p>
-            <p>The set includes a miniature set of fashionable clothes, a hairbrush, a bottle for water, a pair of hairpins and elastic bands for hair, as well as two bracelets: one for the doll, the other for her young mistress.</p>
+            <h2 class="description-title">Product Description</h2>
+            <p class="description-item">Interactive doll Zapf Creation Baby Born Sister can drink from a bottle and almost really cry. You can even bathe her, just like a little sister.</p>
+            <p class="description-item">A toy with a height of 43 cm bends its knees, the head rotates, it can stand upright. Such a doll will be an excellent choice for a gift for a girl from 4 years old.</p>
+            <p class="description-item">The set includes a miniature set of fashionable clothes, a hairbrush, a bottle for water, a pair of hairpins and elastic bands for hair, as well as two bracelets: one for the doll, the other for her young mistress.</p>
         </section>
     </main>
     <footer class="footer wrapper">
         <div class="footer-content container">
             <div class="footer-first-block">
                 <div class="footer-block-item">
-                    <h4 class="">Navigation</h4>
+                    <h4>Navigation</h4>
                     <nav>
                         <ul class="outline footer-list">
                             <li><a class="footer-link" href="#">About Us</a></li> 
@@ -105,7 +119,7 @@
                     </nav>
                 </div>
             <div class="footer-block-item">
-                <h4 class="">Customer Information</h4>
+                <h4>Customer Information</h4>
                 <nav>
                     <ul class="outline footer-list">
                         <li><a class="footer-link" href="#">Contact Us</a></li> 
@@ -118,7 +132,7 @@
                 </nav>
             </div>
             <div class="footer-block-item item_block">
-                <h4 class="">Connect</h4>
+                <h4 >Connect</h4>
                 <form class="form-container"action="#" method="POST" class="">
                     <input name="mail" type="email" placeholder="Email">
                     <button class="footer-btn" type="submit">Join</button>
@@ -164,7 +178,7 @@
                 </div>
                 <div class="rating-item">
                     <svg width="14" height="13" viewBox="0 0 14 13" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M5.60845 0.927052C5.9078 0.0057416 7.21121 0.00574088 7.51056 0.927052L8.58013 4.21885H12.0413C13.0101 4.21885 13.4128 5.45846 12.6291 6.02786L9.82895 8.06231L10.8985 11.3541C11.1979 12.2754 10.1434 13.0415 9.35968 12.4721L6.55951 10.4377L3.75934 12.4721C2.97563 13.0415 1.92115 12.2754 2.2205 11.3541L3.29007 8.06231L0.4899 6.02787C-0.293814 5.45846 0.108961 4.21885 1.07768 4.21885H4.53888L5.60845 0.927052Z" fill="white"/>
+                        <path d="M5.60845 0.927052C5.9078 0.0057416 7.21121 0.00574088 7.51056 0.927052L8.58013 4.21885H12.0413C13.0101 4.21885 13.4128 5.45846 12.6291 6.02786L9.82895 8.06231L10.8985 11.3541C11.1979 12.2754 10.1434 13.0415 9.35968 12.4721L6.55951 10.4377L3.75934 12.4721C2.97563 13.0415 1.92115 12.2754 2.2205 11.3541L3.29007 8.06231L0.4899 6.02787C-0.293814 5.45846 0.108961 4.21885 1.07768 4.21885H4.53888L5.60845 0.927052Z" fill="#836E5B"/>
                     </svg>
                     <svg width="14" height="13" viewBox="0 0 14 13" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M5.60845 0.927052C5.9078 0.0057416 7.21121 0.00574088 7.51056 0.927052L8.58013 4.21885H12.0413C13.0101 4.21885 13.4128 5.45846 12.6291 6.02786L9.82895 8.06231L10.8985 11.3541C11.1979 12.2754 10.1434 13.0415 9.35968 12.4721L6.55951 10.4377L3.75934 12.4721C2.97563 13.0415 1.92115 12.2754 2.2205 11.3541L3.29007 8.06231L0.4899 6.02787C-0.293814 5.45846 0.108961 4.21885 1.07768 4.21885H4.53888L5.60845 0.927052Z" fill="white"/>
