--- a/contact.html
+++ b/contact.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Contact Us</title>
+    <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="#">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@1,400;1,700&family=Montserrat:wght@700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header class="header container" id="header-top">
+    <header class="header container">
         <a href="#">
             <svg class="header-logo" width="100" height="52" viewBox="0 0 100 52" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd" d="M0 0H18.1129C31.1202 0 40.4058 12.3713 40.4058 24.0356V27.7332C40.4058 39.3974 31.1202 51.7689 18.1129 51.7689H0V0ZM37.6192 24.0356C37.6192 13.5132 29.2167 2.77333 18.1129 2.77333H2.78661V48.9956H18.1129C29.2167 48.9956 37.6192 38.2557 37.6192 27.7333V24.0356Z" fill="#1E0606"/>
@@ -42,10 +43,8 @@
             </ul>
         </div> 
 
-        <section class="contacts">
-            <div class="contacts-form">
-                <h1 class="hidden">Modal window</h1>
-        <form action="#" method="POST" class="form-body">
+        <section class="contacts-form">
+            <form action="#" method="POST" class="form-body">
             <fieldset class="form-fieldset">
                 <div class="form-item">
                     <label for="form-name" class="form-label">Name</label>
@@ -76,14 +75,13 @@
             </fieldset>
             <button class="submit">Submit</button>
         </form>
-            </div>
-            
+                        
             <div class="support">
                 <p>Our support team are on-hand to assist with any issues you are experiencing.</p>
                 <p>Please use the form to contact us with your needs. Send us a message and we'll respond as soon as possible.</p>
                 <p>An expert is waiting to help you!</p>
             </div>
-        </section>
+    </section>
     </main>
 
     <footer class="footer wrapper">
