--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Main page</title>
+    <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@1,400;1,700&family=Montserrat:wght@700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header class="header container" id="header-top">
+    <header class="header container">
         <a href="#">
             <svg class="header-logo" width="100" height="52" viewBox="0 0 100 52" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd" d="M0 0H18.1129C31.1202 0 40.4058 12.3713 40.4058 24.0356V27.7332C40.4058 39.3974 31.1202 51.7689 18.1129 51.7689H0V0ZM37.6192 24.0356C37.6192 13.5132 29.2167 2.77333 18.1129 2.77333H2.78661V48.9956H18.1129C29.2167 48.9956 37.6192 38.2557 37.6192 27.7333V24.0356Z" fill="#1E0606"/>
@@ -39,13 +40,10 @@
             </div>   
                 <img class="slider-img"src="images/slider1.png" alt="">
             </div>
-            <div class="slider-second-block">
-                <p>Free (continental) USA shipping on all orders of $100 USD or more!</p>
-            </div>            
-                
+            <p class="slider-info">Free (continental) USA shipping on all orders of $100 USD or more!</p>
+                           
         </section>
-        <section class="products">
-            <div class="container">
+        <section class="products container">
                 <h2 class="products-title">Category Products</h2>
                 <ul class="outline products-list">
                 <li class="products-item">
@@ -94,8 +92,7 @@
             <div>
                 <p class="info_item">Modern finds for the modern home. Curated goods by unique designers around the world from fashion to furniture for kids and adults.</p>
             </div>
-        </div>
-            </section>
+        </section>
         </section>
         <section class="delivery container">
             <img src="images/delivery.jpg" alt="" width="480" height="559">
@@ -150,9 +147,7 @@
         <div class="contacts-content">
                 <h2 class="contacts-title">Contacts</h2>
                 <p class="contacts-item">Some days i feel like i've been working on dlk my entire life and there are other days that i am completely shocked that four years have flown by. It's simply magical.</p>
-            <div class="map">
                 <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Ae975d5d0230c97fc17fe4170bcd64da9bd5d640035324b55dcba715d358a7b22&amp;source=constructor" width="483" height="196" frameborder="0" style="border:0"></iframe>
-            </div>
         </div>
     </section>
     </main>
@@ -161,7 +156,7 @@
     <div class="footer-content container">
         <div class="footer-first-block">
             <div class="footer-block-item">
-                <h4 class="">Navigation</h4>
+                <h4>Navigation</h4>
                 <nav>
                     <ul class="outline footer-list">
                         <li><a class="footer-link" href="#">About Us</a></li> 
@@ -174,7 +169,7 @@
                 </nav>
             </div>
         <div class="footer-block-item">
-            <h4 class="">Customer Information</h4>
+            <h4>Customer Information</h4>
             <nav>
                 <ul class="outline footer-list">
                     <li><a class="footer-link" href="#">Contact Us</a></li> 
@@ -187,7 +182,7 @@
             </nav>
         </div>
         <div class="footer-block-item item_block">
-            <h4 class="">Connect</h4>
+            <h4 >Connect</h4>
             <form class="form-container"action="#" method="POST" class="">
                 <input name="mail" type="email" placeholder="Email">
                 <button class="footer-btn" type="submit">Join</button>
@@ -233,7 +228,7 @@
             </div>
             <div class="rating-item">
                 <svg width="14" height="13" viewBox="0 0 14 13" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M5.60845 0.927052C5.9078 0.0057416 7.21121 0.00574088 7.51056 0.927052L8.58013 4.21885H12.0413C13.0101 4.21885 13.4128 5.45846 12.6291 6.02786L9.82895 8.06231L10.8985 11.3541C11.1979 12.2754 10.1434 13.0415 9.35968 12.4721L6.55951 10.4377L3.75934 12.4721C2.97563 13.0415 1.92115 12.2754 2.2205 11.3541L3.29007 8.06231L0.4899 6.02787C-0.293814 5.45846 0.108961 4.21885 1.07768 4.21885H4.53888L5.60845 0.927052Z" fill="white"/>
+                    <path d="M5.60845 0.927052C5.9078 0.0057416 7.21121 0.00574088 7.51056 0.927052L8.58013 4.21885H12.0413C13.0101 4.21885 13.4128 5.45846 12.6291 6.02786L9.82895 8.06231L10.8985 11.3541C11.1979 12.2754 10.1434 13.0415 9.35968 12.4721L6.55951 10.4377L3.75934 12.4721C2.97563 13.0415 1.92115 12.2754 2.2205 11.3541L3.29007 8.06231L0.4899 6.02787C-0.293814 5.45846 0.108961 4.21885 1.07768 4.21885H4.53888L5.60845 0.927052Z" fill="#836E5B"/>
                 </svg>
                 <svg width="14" height="13" viewBox="0 0 14 13" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M5.60845 0.927052C5.9078 0.0057416 7.21121 0.00574088 7.51056 0.927052L8.58013 4.21885H12.0413C13.0101 4.21885 13.4128 5.45846 12.6291 6.02786L9.82895 8.06231L10.8985 11.3541C11.1979 12.2754 10.1434 13.0415 9.35968 12.4721L6.55951 10.4377L3.75934 12.4721C2.97563 13.0415 1.92115 12.2754 2.2205 11.3541L3.29007 8.06231L0.4899 6.02787C-0.293814 5.45846 0.108961 4.21885 1.07768 4.21885H4.53888L5.60845 0.927052Z" fill="white"/>
